--- a/css/main.css
+++ b/css/main.css
@@ -88,6 +88,94 @@ h6 {
   font-weight: 400;
 }
 
-.contsiner {
+.container {
   max-width: 1300px;
+  margin: 0 auto;
+  background-color: #999;
+}
+
+.rolling-menu__elements {
+  width: 1300px;
+  height: 1300px;
+  border: 2px solid #000;
+  border-radius: 50%;
+  margin: 0 auto;
+  position: relative;
+}
+
+.rolling-menu__element-container {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+
+.rolling-menu__element-container_pyro {
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+}
+
+.rolling-menu__element-container_hydro {
+  -webkit-transform: rotate(60deg);
+          transform: rotate(60deg);
+}
+
+.rolling-menu__element-container_anemo {
+  -webkit-transform: rotate(30deg);
+          transform: rotate(30deg);
+}
+
+.rolling-menu__element-container_electro {
+  -webkit-transform: rotate(0deg);
+          transform: rotate(0deg);
+}
+
+.rolling-menu__element-container_dendro {
+  -webkit-transform: rotate(-30deg);
+          transform: rotate(-30deg);
+}
+
+.rolling-menu__element-container_cryo {
+  -webkit-transform: rotate(-60deg);
+          transform: rotate(-60deg);
+}
+
+.rolling-menu__element-container_geo {
+  -webkit-transform: rotate(-90deg);
+          transform: rotate(-90deg);
+}
+
+.rolling-menu__element {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+
+.rolling-menu__icon_pyro {
+  fill: #FE925D;
+}
+
+.rolling-menu__icon_hydro {
+  fill: #21E1EB;
+}
+
+.rolling-menu__icon_anemo {
+  fill: #72E2C3;
+}
+
+.rolling-menu__icon_electro {
+  fill: #A757CB;
+}
+
+.rolling-menu__icon_dendro {
+  fill: #23C18A;
+}
+
+.rolling-menu__icon_cryo {
+  fill: #A0E9E5;
+}
+
+.rolling-menu__icon_geo {
+  fill: #E3B342;
 }
