--- a/css/main.css
+++ b/css/main.css
@@ -101,6 +101,8 @@ h6 {
   border-radius: 50%;
   margin: 0 auto;
   position: relative;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
 }
 
 .rolling-menu__element-container {
@@ -109,47 +111,68 @@ h6 {
   position: absolute;
 }
 
-.rolling-menu__element-container_pyro {
-  -webkit-transform: rotate(90deg);
-          transform: rotate(90deg);
-}
-
-.rolling-menu__element-container_hydro {
-  -webkit-transform: rotate(60deg);
-          transform: rotate(60deg);
-}
-
-.rolling-menu__element-container_anemo {
-  -webkit-transform: rotate(30deg);
-          transform: rotate(30deg);
-}
-
-.rolling-menu__element-container_electro {
-  -webkit-transform: rotate(0deg);
-          transform: rotate(0deg);
-}
-
-.rolling-menu__element-container_dendro {
-  -webkit-transform: rotate(-30deg);
-          transform: rotate(-30deg);
-}
-
-.rolling-menu__element-container_cryo {
-  -webkit-transform: rotate(-60deg);
-          transform: rotate(-60deg);
-}
-
-.rolling-menu__element-container_geo {
-  -webkit-transform: rotate(-90deg);
-          transform: rotate(-90deg);
-}
-
 .rolling-menu__element {
+  height: 150px;
+  width: 150px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   position: absolute;
-  bottom: 0;
+  top: 50%;
   left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+}
+
+.rolling-menu__element_pyro {
+  -webkit-transform: translate(-50%, -50%) rotate(79deg) translateY(550px);
+          transform: translate(-50%, -50%) rotate(79deg) translateY(550px);
+}
+
+.rolling-menu__element_hydro {
+  -webkit-transform: translate(-50%, -50%) rotate(56deg) translateY(550px);
+          transform: translate(-50%, -50%) rotate(56deg) translateY(550px);
+}
+
+.rolling-menu__element_anemo {
+  -webkit-transform: translate(-50%, -50%) rotate(28deg) translateY(550px);
+          transform: translate(-50%, -50%) rotate(28deg) translateY(550px);
+}
+
+.rolling-menu__element_electro {
+  -webkit-transform: translate(-50%, -50%) rotate(0deg) translateY(550px);
+          transform: translate(-50%, -50%) rotate(0deg) translateY(550px);
+}
+
+.rolling-menu__element_dendro {
+  -webkit-transform: translate(-50%, -50%) rotate(-28deg) translateY(550px);
+          transform: translate(-50%, -50%) rotate(-28deg) translateY(550px);
+}
+
+.rolling-menu__element_cryo {
+  -webkit-transform: translate(-50%, -50%) rotate(-56deg) translateY(550px);
+          transform: translate(-50%, -50%) rotate(-56deg) translateY(550px);
+}
+
+.rolling-menu__element_geo {
+  -webkit-transform: translate(-50%, -50%) rotate(-79deg) translateY(550px);
+          transform: translate(-50%, -50%) rotate(-79deg) translateY(550px);
+}
+
+.rolling-menu__element:hover .rolling-menu__icon {
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
+}
+
+.rolling-menu__icon {
+  -webkit-filter: drop-shadow(10px 10px 10px #000);
+          filter: drop-shadow(10px 10px 10px #000);
+  -webkit-transition: -webkit-transform 0.3s ease;
+  transition: -webkit-transform 0.3s ease;
+  transition: transform 0.3s ease;
+  transition: transform 0.3s ease, -webkit-transform 0.3s ease;
+  cursor: pointer;
 }
 
 .rolling-menu__icon_pyro {
