--- a/css/main.css
+++ b/css/main.css
@@ -95,12 +95,14 @@ body {
 
 .container {
   margin: 0 auto;
-  max-width: 1300px;
+  min-width: 1340px;
   overflow: hidden;
+  padding: 0 20px;
 }
 
 .header {
   height: 100px;
+  min-width: 1340px;
   background-color: #555;
 }
 
